--- a/PIG_16_23318/.env.example
+++ b/PIG_16_23318/.env.example
@@ -6,3 +6,10 @@ DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_HOST=
 DATABASE_PORT=
+
+#CORREO
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+RECIPIENT_ADDRESS=
