--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.6.0
+crispy-bootstrap5==0.7
 Django==3.2.18
+django-crispy-forms==2.0
 django-environ==0.10.0
 Pillow==9.5.0
 psycopg2==2.9.6
